@@ -12,6 +12,7 @@ Bugs fixed:
 - 2158198 syslog call incorrect
 - 2164750 sfcb does not handle some malformed HTTP requests correctly
 - 2169514 spRcvMsg doesn't check malloc return
+- 2169527 Some XML parsing error strings do not have sufficient space
 
 Changes in 1.3.2
 ================
